# heig-tb-report

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  biblio-finding.md  calcul-pourcentage-participation-votation-99pourcent.ods  calcul-resultat.ods  planning.md
.github/action/: Dockerfile
.github/workflows/: prerelease.yml  release.yml  rust.yml  test.yml
app/: Cargo.toml  test.csv
app/board/: Cargo.toml
app/board/src/: main.rs
app/client/: Cargo.toml
app/client/src/: lib.rs  main.rs
app/lib/: Cargo.toml  test.csv  test2.csv
app/lib/src/: crypto.rs  lib.rs  main.rs
app/perf/: Cargo.toml
latex/: Makefile  MakefileDyn  MakefileSubdir  _meta.tex  biblio-to-sort.bib  biblio.bib  bibliography-draft.tex  heig-bachelor.cls  heig.sty  listings-rust.sty  publishable-summary.tex  report.tex  tmp.txt
latex/content/: _dyn  biblio-analyse.tex  cahier-des-charges.tex  crypto-requirements.tex  diff-methode.tex  example.tex  implementation.tex  introduction.tex  resultat.tex
loranle/board/src/: main.rs
loranle/client/: Cargo.toml
loranle/lib/src/: lib.rs
mindmap/: Système-de-vote.minder
simulation-scrutin/: Cargo.toml
simulation-scrutin/src/: main.rs
