[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lib = { path = "../lib" }
console = "0.15"
zkp = { version = "0.8" }
serde_json = { version = "1.0"}
[dependencies.curve25519-dalek]
default-features = false
features = ["serde", "std"]
package = "curve25519-dalek-ng"
version = "3"

