[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
rand = "0.8"
sha2 = "0.9"
p256 = { version = "0.11", features = [ "arithmetic" ] }
ff = "0.12"
zkp = { version = "0.8" }

bincode = "1"
[dependencies.curve25519-dalek]
default-features = false
features = ["serde", "std"]
package = "curve25519-dalek-ng"
version = "3"

