[package]
name = "perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
zkp = { version = "0.8" }
si-scale = "0.1"
rayon = "1.5"

[dependencies.curve25519-dalek]
package = "curve25519-dalek-ng"
version = "3"

